--- a/SportsStore/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Product/List.cshtml
@@ -1,11 +1,11 @@
-﻿@using SportsStore.Domain.Entities;
-@model IEnumerable<Product>
+﻿@model SportsStore.WebUI.Models.ProductListViewModel
+@using SportsStore.WebUI.HtmlHelpers;
 
 @{
-    ViewBag.Title = "List";
+    ViewBag.Title = "Produkty";
 }
 
-@foreach(Product p in @Model)
+@foreach(var p in Model.Products)
 {
     <div>
         <h3>@p.Name</h3>
@@ -13,4 +13,8 @@
         <h4>@p.Price.ToString("c")</h4>
     </div>
 }
+
+<div>
+    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x }))
+</div>
 
