--- a/SportsStore/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Product/List.cshtml
@@ -1,22 +1,17 @@
 ﻿@model SportsStore.WebUI.Models.ProductListViewModel
 @using SportsStore.WebUI.HtmlHelpers;
 
+
 @{
     ViewBag.Title = "Produkty";
 }
 
 @foreach(var p in Model.Products)
 {
-    <div class="well">
-        <h3>
-            <strong>@p.Name</strong>
-            <span class="pull-right label label-primary">@p.Price.ToString("c")</span>
-        </h3>
-        <span class="lead">@p.Description</span>
-    </div>
+  @Html.Partial("ProductSummary", p);
 }
 
-<div class="btn-group pull-right">
-    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x }))
+<div class="pager">
+    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x, category = Model.CurrentCategory }))
 </div>
 
