--- a/SportsStore/SportsStore.WebUI/Views/Nav/Menu.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Nav/Menu.cshtml
@@ -6,11 +6,12 @@
 @foreach (var link in Model)
 {
     @Html.RouteLink(link, new
-    {
-        Controller = "Product",
-        action = "List",
-        category = link,
-        page = 1
-    }, new {
-    @class = "btn btn-block btn-default btn-lg"})
+{
+    Controller = "Product",
+    action = "List",
+    category = link,
+    page = 1
+}, new {
+    @class = "btn btn-block btn-default btn-lg"
+    + (link == ViewBag.SelectedCategory ? " btn-primary" : "")})
 }
