--- a/SportsStore/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Product/List.cshtml
@@ -11,7 +11,7 @@
   @Html.Partial("ProductSummary", p);
 }
 
-<div class="pager">
+<div class="pager pull-right">
     @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x, category = Model.CurrentCategory }))
 </div>
 
